Add example of another debug target in launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,17 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "name": "Debug: vector tests",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/tests",
+      "args": ["-tc=*vector*"],
+      "cwd": "${workspaceFolder}",
+      "MIMode": "lldb",
+      "externalConsole": false,
+      "preLaunchTask": "make: build"
     }
   ]
 }
