Fix launch.json to point to bin/tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug tests (MS C++ Extension)",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/tests",
+      "program": "${workspaceFolder}/bin/tests",
       "args": [
         // Optional doctest args, for example:
         // "-tc=*vector*", "--success"
@@ -27,7 +27,7 @@
       "name": "Debug: vector tests",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/tests",
+      "program": "${workspaceFolder}/bin/tests",
       "args": ["-tc=*vector*"],
       "cwd": "${workspaceFolder}",
       "MIMode": "lldb",
